# simplipt

./: .gitignore  LICENSE  MANIFEST.in  Procfile  README.md  _test_ast.py  _test_ast2.py  _test_capture.py  _test_crud.py  _test_dash2.py  _test_debug.py  _test_dictcall.py  _test_exec.py  _test_exec2.py  _test_full.py  _test_interp.py  _test_lex_parse.py  _test_live.py  _test_mini.py  _test_scope.py  _test_vivo.py  blog.db  novo.spt  pyproject.toml  render.yaml  simplipt.bat  start.sh  teste_exec.spt  teste_rapido.spt  validar_exemplos.spt
.github/workflows/: test.yml
examples/: api_servidor.spt  condicionais.spt  funcoes.spt  lista_dict.spt  loops.spt  modulos.spt  ola_mundo.spt
exemplos/: api_tarefas.spt  blog.spt  tarefas.spt
exemplos/site/: site.spt
modelos/admin/: dashboard.spt  editor.spt.html  executar.spt.html  index.spt.html  layout.spt.html
src/: build.py  cli.py  dashboard.py  debug.py  debug_web.py  erros.py  ext_modules.py  hot_reload.py  json_mode.py  lsp.py  profile.py  scaffold.py  strict.py  test_runner.py
src/ferramentas/: formatador.py  transpilador.py
src/interpreter/: environment.py  interpreter.py
src/lexer/: lexer.py  token.py
src/parser/: ast.py  parser.py
src/runtime/: builtins.py
src/stdlib/: arquivos.py  banco.py  cache.py  config.py  data.py  executar.py  fila.py  hashes.py  http.py  (+9 more)
tests/: test_integracao.py  test_interpreter.py  test_lexer.py  test_parser.py  test_stdlib.py  test_stdlib_v2.py  test_stdlib_v3.py  test_v4_features.py  test_v5_features.py
vscode-simplipt/: language-configuration.json  package.json
(+23 files in other folders)
